# ecommerce-django-service

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  variations.json
categories/: models.py
categories/fixtures/: db_categories_fixture.json  db_category_fixture.json
categories/migrations/: 0001_initial.py
demo/fixtures/: db_admin_user_fixture.json
demo/management/commands/: setup_test_data.py
ecommerce_django_service/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/fixtures/: db_brands_fixture.json  db_colors_fixture.json  db_labels_fixture.json  db_product_attribute_values_fixture.json  db_product_attributes_fixture.json  db_product_items_attribute_values_fixture.json  db_product_items_fixture.json  db_product_types_attributes_fixture.json  db_product_types_fixture.json  db_products_fixture.json
products/migrations/: 0001_initial.py  0002_rename_brand_id_product_brand_and_more.py
smartphones/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
smartphones/fixtures/: db_camera_features_fixture.json  db_communication_standarts_fixture.json  db_smartphones_fixture.json
smartphones/migrations/: 0001_initial.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: home.html
