[tool.poetry]
name = "ecommerce_django_service"
version = "0.1.0"
description = ""
authors = ["sstefanyuk <stefanyuk.andriyigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.7"
django-mptt = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
